Enhance .env.example with optional Deezer ARL cookie for track downloads; update Dockerfile entrypoint script for improved permission handling; refine README.md with Deezer download configuration options; modify docker-compose files for path adjustments; expand downloader.py with multiple search strategies and validation for Deezer tracks; update gemini_ai.py for improved playlist generation rules; enhance i18n.py for safer language retrieval; add free search functionality in missing_tracks.html for user-friendly Deezer track searches.

--- a/docker-compose.hub.yml
+++ b/docker-compose.hub.yml
@@ -15,6 +15,6 @@ services:
       - ./templates:/app/templates
       - ./plex_playlist_sync:/app/plex_playlist_sync
       - ./app.py:/app/app.py
-      - M:/Organizzata:/music
+      - /mnt/e/Music:/music
       - ./config.toml:/root/.config/streamrip/config.toml
     restart: on-failure
