--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,9 @@ FORCE_DELETE_OLD_PLAYLISTS=0
 RUN_DOWNLOADER=1
 RUN_GEMINI_PLAYLIST_CREATION=1
 
+# Numero massimo di tentativi per ogni download
+DOWNLOAD_MAX_RETRIES=3
+
 # Optional: Deezer ARL cookie for downloading tracks (leave empty to skip Deezer downloads)
 # Get your ARL from: https://github.com/nathom/streamrip/wiki/Finding-your-Deezer-ARL-Cookie
 DEEZER_ARL=
