Use MUSIC_PATH env variable

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,11 @@ FORCE_DELETE_OLD_PLAYLISTS=0
 RUN_DOWNLOADER=1
 RUN_GEMINI_PLAYLIST_CREATION=1
 
+# Local path where your music library is stored
+# Example (Windows): M:\Organizzata
+# Example (Linux/Mac): /mnt/music
+MUSIC_PATH=M:\\Organizzata
+
 # Optional: Deezer ARL cookie for downloading tracks (leave empty to skip Deezer downloads)
 # Get your ARL from: https://github.com/nathom/streamrip/wiki/Finding-your-Deezer-ARL-Cookie
 DEEZER_ARL=
