--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,6 @@ services:
       - ./templates:/app/templates
       - ./plex_playlist_sync:/app/plex_playlist_sync
       - ./app.py:/app/app.py
-      - M:\Organizzata:/music         # ↩️ percorsa musicale locale (modifica se necessario)
+      - ${MUSIC_PATH}:/music         # ↩️ percorsa musicale locale (modifica se necessario)
       - ./config.toml:/root/.config/streamrip/config.toml
     restart: on-failure
