--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,8 @@ RUN_GEMINI_PLAYLIST_CREATION=1
 # Get your ARL from: https://github.com/nathom/streamrip/wiki/Finding-your-Deezer-ARL-Cookie
 DEEZER_ARL=
 
+# Optional: use Soulseek (slskd) as fallback downloader
+USE_SOULSEEK=0
+SLSKD_URL=http://localhost:5030
+SLSKD_TOKEN=
+
