feat: Add Soulseek post-processor for organizing downloaded audio files
- Implemented SoulseekPostProcessor class to handle the reorganization of downloaded files from Soulseek.
- Extracted metadata from audio files using mutagen, with fallback to filename and folder structure.
- Sanitized filenames for Windows compatibility.
- Processed audio files and organized them into a structured directory format based on artist, album, and track title.
- Added cleanup functionality to remove empty directories after processing.
- Included logging for tracking processing status and errors.

--- a/.env.example
+++ b/.env.example
@@ -33,4 +33,10 @@ USE_SOULSEEK=0
 SLSKD_URL=http://localhost:5030
 SLSKD_TOKEN=
 
+# Soulseek Downloads Configuration
+# Source path where slskd saves downloaded files (Windows path)
+SOULSEEK_DOWNLOADS_PATH=E:\\slskd\\downloads\\
+# Target path where files should be organized (same structure as Deezer downloads)
+SOULSEEK_ORGANIZED_PATH=M:\\Organizzata\\
+
 
