feat: Enhance Soulseek integration with post-processing options and improved error handling

--- a/.env.example
+++ b/.env.example
@@ -38,5 +38,7 @@ SLSKD_TOKEN=
 SOULSEEK_DOWNLOADS_PATH=E:\\slskd\\downloads\\
 # Target path where files should be organized (same structure as Deezer downloads)
 SOULSEEK_ORGANIZED_PATH=M:\\Organizzata\\
+# Delete source files after successful copy (1=yes, 0=no) - default: 0
+SOULSEEK_DELETE_SOURCE_FILES=0
 
 
