Add configurable UID/GID support

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,7 @@ RUN_GEMINI_PLAYLIST_CREATION=1
 # Get your ARL from: https://github.com/nathom/streamrip/wiki/Finding-your-Deezer-ARL-Cookie
 DEEZER_ARL=
 
+
+# Optional: Set container user and group IDs
+PUID=1000
+PGID=1000
