--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
     container_name: plex-library-completer
     env_file:
       - /mnt/cache/appdata/plex-completer/.env
+    environment:
+      - PUID=1000
+      - PGID=1000
     ports:
       - "5000:5000"
     volumes:
