Enhance AI playlist generation by adding track count customization; update era presets in UI for better user experience

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,5 +20,5 @@ services:
       - ./app.py:/app/app.py
       - ./.env:/app/.env
       - ./config.toml:/root/.config/streamrip/config.toml
-      - /mnt/m/Organizzata:/music
+      - m:/Organizzata:/music
     restart: on-failure
