Enhance AI Lab UI with compact preset tabs and improved user selection corrected some translation; integrate Ollama as a fallback for playlist generation; add Gemini status monitoring to the navigation bar.

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,9 @@ DEEZER_ARL=
 # Optional: Set container user and group IDs
 PUID=1000
 PGID=1000
+
+# Optional: Ollama AI fallback configuration (when Gemini reaches rate limits)
+# Ollama URL (default: http://localhost:11434)
+OLLAMA_URL=http://localhost:11434
+# Ollama model name (default: hermes3:8b)
+OLLAMA_MODEL=hermes3:8b
