Add Spotify user ID configuration

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ DEEZER_PLAYLIST_ID=12345678,87654321
 DEEZER_PLAYLIST_ID_SECONDARY=98765432
 SPOTIFY_CLIENT_ID=yourSpotifyClientID
 SPOTIFY_CLIENT_SECRET=yourSpotifyClientSecret
+SPOTIFY_USER_ID=
 GEMINI_API_KEY=yourGeminiApiKey
 PLEX_FAVORITES_PLAYLIST_ID_MAIN=12345
 PLEX_FAVORITES_PLAYLIST_ID_SECONDARY=54321
