--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ DEEZER_PLAYLIST_ID_SECONDARY=98765432
 SPOTIFY_CLIENT_ID=yourSpotifyClientID
 SPOTIFY_CLIENT_SECRET=yourSpotifyClientSecret
 SPOTIFY_USER_ID=
+SPOTIFY_PLAYLIST_IDS=
+SPOTIFY_PLAYLIST_IDS_SECONDARY=
 GEMINI_API_KEY=yourGeminiApiKey
 PLEX_FAVORITES_PLAYLIST_ID_MAIN=12345
 PLEX_FAVORITES_PLAYLIST_ID_SECONDARY=54321
